# sphinx_poc_project

./: .readthedocs.yaml  README.md  pyproject.toml  pyrightconfig.json
_build/doctrees/: environment.pickle
_build/html/: .buildinfo  index.html  poc_project.models.html  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
_build/html/_sources/: index.rst
docs/: README.md  conf.py  index.rst  poc_project.data.rst
docs/_build/doctrees/: index.doctree  poc_project.data.doctree  poc_project.models.doctree
docs/_build/html/: genindex.html  objects.inv  poc_project.data.html
docs/_build/html/_modules/poc_project/data/: connection.html
docs/_build/html/_modules/poc_project/models/: Student.html
docs/_build/html/_sources/: poc_project.models.rst
docs/source/: conf.py  index.rst  modules.rst  poc_project.models.rst  poc_project.rst
poc_project/: __init__.py  app.py
poc_project/data/: __init__.py  connection.py
poc_project/models/: Student.py
tests/data/: test_connection.py
