[tool.poetry]
name = "poc_project"
version = "0.1.0"
description = ""
authors = ["Rajendra Kumar Yadav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = { version = "^2.4.0+cpu", source = "pytorch_cpu" }
torchvision = { version = "^0.19.0+cpu", source = "pytorch_cpu" }
sqlmodel = "^0.0.21"
fastapi = "^0.112.1"
pydantic = "^2.8.2"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
furo = "^2024.8.6"
sphinx-book-theme = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
